@@ -3,43 +3,50 @@ plugins {
     id 'java'
     id 'groovy'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.10'
+    id 'org.openjfx.javafxplugin' version '0.0.14'
+    id 'com.github.ben-manes.versions' version '0.48.0'
 }
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 apply plugin: 'java'
-sourceCompatibility = 17
-targetCompatibility = 17
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+    }
+}
 
 javafx {
-    version = "17"
+    version = "25"
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 dependencies {
-    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
-    testRuntimeOnly  group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
-    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.8.2'
-    testImplementation  group: 'org.hamcrest', name: 'hamcrest-library', version: '2.2'
-    testImplementation  group: 'org.mockito', name: 'mockito-core', version:'3.1.0'
-    implementation  group: 'org.apache.groovy', name: 'groovy', version: '4.0.0-rc-1'
-    implementation  group: 'org.springframework', name:'spring-context', version: '5.3.13'
-    implementation  group: 'de.siegmar', name: 'fastcsv', version: '2.1.0'
-    implementation  group: 'commons-validator', name: 'commons-validator', version: '1.7'
-    implementation  group: 'de.jensd', name: 'fontawesomefx-commons', version: '11.0'
-    implementation  group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-11'
-    implementation  group: 'de.jensd', name: 'fontawesomefx-materialdesignfont', version: '1.7.22-11'
-    implementation  group: 'de.jensd', name: 'fontawesomefx-materialicons', version: '2.2.0-11'
-    implementation  group: 'org.controlsfx', name: 'controlsfx', version: '11.1.0'
-    implementation  group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
-    implementation  group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
-    implementation  group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
-    implementation  group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.7'
+    // updated testing libraries
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-launcher', version: '6.0.0'
+    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '6.0.0'
+    testRuntimeOnly  group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '6.0.0'
+    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '6.0.0'
+    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '3.0'
+    testImplementation  group: 'org.mockito', name: 'mockito-core', version:'5.20.0'
+
+    // runtime libraries - bumped to recent stable versions where compatible
+    implementation group: 'org.apache.groovy', name: 'groovy', version: '5.0.2'
+    implementation group: 'org.springframework', name: 'spring-context', version: '6.2.12'
+    implementation group: 'de.siegmar', name: 'fastcsv', version: '4.1.0'
+    implementation group: 'commons-validator', name: 'commons-validator', version: '1.10.0'
+    implementation group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2'
+    implementation group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-9.1.2'
+    implementation group: 'de.jensd', name: 'fontawesomefx-materialdesignfont', version: '2.0.26-9.1.2'
+    implementation group: 'de.jensd', name: 'fontawesomefx-materialicons', version: '2.2.0-9.1.2'
+    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.2.2'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.13.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.25.2'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.25.2'
+    implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.11.6'
 
 }
 
@@ -48,5 +55,9 @@ test {
 }
 
 group 'ninja.javafx'
-version '1.4.0'
-mainClassName = 'ninja.javafx.smartcsv.Main'
+version '1.5.0'
+
+application {
+    mainClass = 'ninja.javafx.smartcsv.Main'
+    applicationDefaultJvmArgs = ["--enable-native-access=javafx.graphics"]
+}
